--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,3 @@
-set-option status-position top
-set-option status-style bg=white,fg=blue
-set-option status-right ""
+set-option -g status-position top
+set-option -g status-style bg=white,fg=blue
+set-option -g status-right ""
