--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,3 @@
 set-option -g status-position top
-set-option -g status-style bg=white,fg=blue
+set-option -g status-style bg=white,fg=brightred
 set-option -g status-right ""
