Tootle up the color scheme a bit

--- a/doots/tmux.conf
+++ b/doots/tmux.conf
@@ -1,3 +1,3 @@
 set-option -g status-position bottom
-set-option -g status-style bg=green,fg=blue
+set-option -g status-style bg=white,fg=magenta,bold
 set-option -g status-right "#h %H:%M"
