Bug fix: was parsing int but assigning to double
Caught in the Linux build. General Linux build fixes.

--- a/cantrips/Makefile
+++ b/cantrips/Makefile
@@ -11,7 +11,8 @@ CFLAGS = -Weverything -Werror -std=c2x \
 	-Wno-unknown-warning-option \
 	-Wno-pre-c11-compat \
 	-Wno-pre-c2x-compat \
-	-Wno-gnu-statement-expression-from-macro-expansion
+	-Wno-gnu-statement-expression-from-macro-expansion \
+	-Wno-switch-default
 
 ifdef RELEASE
 	CFLAGS += -O3 -flto=thin
