--- a/cantrips/Makefile
+++ b/cantrips/Makefile
@@ -29,7 +29,7 @@ strip: $(TARGETS)
 color: color.c utils.o
 list: list.c cli.o utils.o
 expand: expand.c cli.o utils.o
-fold: fold.c utils.o
+fold: fold.c cli.o utils.o
 pathname: pathname.c cli.o utils.o
 shuffle: shuffle.c cli.o utils.o
 walk: walk.c utils.o
